Fix - Side menu issues when text overflows

--- a/assets/stylesheet/scss/layout/_sidebar.scss
+++ b/assets/stylesheet/scss/layout/_sidebar.scss
@@ -11,7 +11,6 @@
     top: 0;
     width: 60px;
     height: 100%;
-    overflow: hidden;
     z-index: 6;
     @include transition("all 0.4s");
   }
@@ -51,6 +50,8 @@
         color: inherit;
         padding: 10px;
         max-width: 260px;
+        overflow: hidden;
+        word-break: break-all;
 
         span {
           display: none;
